syntax="proto3";
option go_package = "protocol/v1/agent";
option java_package="com.example.agentgrpc.protocol.agent";
package agent;
option java_multiple_files = true;

//agent管理
service Agent{
  //更新
  rpc UpdateAgent(UpdateAgentReq) returns(UpdateAgentRes){}
}

message UpdateAgentReq{
  string exec_id =1;
  int32 index=2;
}

message UpdateAgentRes{
  int32 code = 1;//状态码
  string message = 2;//详细信息
}
